# AI-Saathi

./: .env.example  .gitignore  README.md  agent_toolkit_deep_dive.md  app.py  compose.yaml  ingestion.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-backend.txt  requirements.txt
.github/: copilot-instructions.md
docker/: Dockerfile.service
docs/: ai-saathi-ppt-content.md  n8n-plan-reminder-agent.md  vercel-deploy.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: GlobalSoundControls.tsx
frontend/lib/: api.ts  supabase.ts
frontend/utils/: soundManager.ts
scripts/: ingest_pdf_to_supabase.py  seed_study_content.sql  setup_n8n_reminders.sql  setup_supabase_rag.sql  setup_supabase_triggers.sql
src/: run_service.py  streamlit_app.py  study_core.py
src/agents/: __init__.py  agents.py  langgraph_state.py  langgraph_workflow.py  llm.py  local_agents.py  memory.py  observability.py  planner_agent.py  progress_analyzer_agent.py  quiz_agent.py  safeguard.py  safety.py  teacher_agent.py  tools.py
src/api/: study_routes.py
src/core/: llm.py  settings.py
src/db/: __init__.py  connection.py  schema.sql  seed_data.sql
src/schema/: __init__.py  models.py  schema.py
src/tools/: __init__.py  (+4 more)
tests/: test_agent_safety_observability.py  test_existing_study_routes_compat.py  test_langgraph_foundation.py  test_langgraph_memory.py  test_langgraph_workflow.py  test_study_agent_endpoint.py  test_study_agent_stream.py  test_study_core_tools.py
(+17 files in other folders)
